--- a/mainsite/static/ogf/css/_tiles.scss
+++ b/mainsite/static/ogf/css/_tiles.scss
@@ -322,7 +322,7 @@
     }
   }
 }
-.detailImgWrap, .detailImgWrapFull, .detailImgWrapLeft {
+.detailImgWrap, .detailImgWrapFull, .detailImgWrapLeft, .poipic {
   overflow:             hidden;
   -webkit-background-size:cover;
   background-size:      cover;
@@ -338,4 +338,7 @@
   //width: 100%;
   //height: 100%;
   min-height: 250px;
+}
+.poipic {
+  min-height:125px;
 }
