--- a/mainsite/static/ogf/css/_tiles.scss
+++ b/mainsite/static/ogf/css/_tiles.scss
@@ -335,10 +335,33 @@
   height:               350px;
 }
 .detailImgWrapLeft {
-  //width: 100%;
-  //height: 100%;
-  min-height: 250px;
+  min-height:           250px;
 }
 .poipic {
-  min-height:125px;
+  min-height:           125px;
+}
+.sideListBoxTitle {
+  font-weight:          $font-bold;
+  font-size:            25px;
+  padding-bottom:       10px;
+  border-bottom:        1px dotted $col-white;
+  margin-bottom:        10px;
+}
+.sideListItem {
+  margin-bottom:        10px;
+
+  .sideListTitle {
+    font-weight:        $font-bold;
+
+    a:hover {
+      color:            $col-ogfbluehover;
+    }
+  }
+  .sideListDate {
+    color:              $col-ogfyellow;
+    font-weight:        $font-light;
+  }
+  .sideListLock {
+    color:              $col-ogfred;
+  }
 }
