--- a/spe_blog/templates/spe_blog/plugins/side_list.html
+++ b/spe_blog/templates/spe_blog/plugins/side_list.html
@@ -1,11 +1,18 @@
 {% load i18n %}
 
+<div class="tile-editorial row">
+    <div class="col-xs-12 sideListBoxTitle">
+        THIS IS THE TITLE
+    </div>
 {% for article in articles %}
-        <a href={{ article.get_absolute_url}}>
-        <div class="tile-editorial row">
-            <div class="col-xs-12 title2">{{ article.title }}</div>
-        </div>
-        </a>
+    <div class="col-xs-12 sideListItem">
+        <span class="sideListTitle"><a href={{ article.get_absolute_url}}>{{ article.title }}</a></span><br>
+        <span class="sideListDate">{{ article.date|date:"d F Y" }}</span>
+        {% if article.is_readable == True %}
+            | <span class="sideListLock"><i class="fa fa-unlock"></i></span>
+        {% endif %}
+    </div>
 {% empty %}
     <p class="well">{% trans "No editorial available" %}</p>
 {% endfor %}
+</div>
