Added tooltips to the lock in the side feature list

--- a/spe_blog/templates/spe_blog/plugins/side_list.html
+++ b/spe_blog/templates/spe_blog/plugins/side_list.html
@@ -1,4 +1,4 @@
-{% load i18n %}
+{% load i18n cms_tags sekizai_tags %}
 
 <div class="tile-editorial row">
     <div class="col-xs-12 sideListBoxTitle">
@@ -9,10 +9,21 @@
         <span class="sideListTitle"><a href={{ article.get_absolute_url}}>{{ article.title }}</a></span><br>
         <span class="sideListDate">{{ article.date|date:"d F Y" }}</span>
         {% if article.is_readable == True %}
-            | <span class="sideListLock"><i class="fa fa-unlock"></i></span>
+            | <span class="sideListLock" data-toggle="tooltip" data-placement="bottom" title="Article is free to view"><i class="fa fa-unlock"></i></span>
         {% endif %}
     </div>
 {% empty %}
     <p class="well">{% trans "No editorial available" %}</p>
 {% endfor %}
 </div>
+
+{% addtoblock "js" %}
+    <script type="text/javascript" charset="utf-8">
+        $( document ).ready(function() {
+            $(function () {
+              $('[data-toggle="tooltip"]').tooltip()
+            })
+        });
+    </script>
+{%  endaddtoblock %}
+
