--- a/mainsite/templates/html5.html
+++ b/mainsite/templates/html5.html
@@ -60,6 +60,7 @@
     {# Add the page wrapper ending here #}
     {% block wrap_end %}{% endblock wrap_end %}
 
+    <!-- JS BLOCK -->
     {# adding block js_inline to base cms template for overriding #}
     {% render_block "js" %}
 
