--- a/mainsite/static/ogf/css/mainstyle.css
+++ b/mainsite/static/ogf/css/mainstyle.css
@@ -407,13 +407,20 @@ a:hover { text-decoration: none; }
 
 .poipic { min-height: 125px; }
 
-.sideListBoxTitle { font-weight: 700; font-size: 25px; padding-bottom: 10px; border-bottom: 1px dotted white; margin-bottom: 10px; }
+.sideListBoxTitle { font-weight: 700; font-size: 20px; padding: 0 0 10px 0; border-bottom: 1px dotted white; margin-bottom: 10px; }
 
-.sideListItem { margin-bottom: 10px; }
-.sideListItem .sideListTitle { font-weight: 700; }
-.sideListItem .sideListTitle a:hover { color: #808bcf; }
-.sideListItem .sideListDate { color: #fffb22; font-weight: 300; }
-.sideListItem .sideListLock { color: #d92226; }
+.sideListItem { padding: 0 0 5px 0; border-bottom: 1px solid #393939; margin-bottom: 5px; }
+
+.sideListTitle { font-weight: 700; padding: 0 0 5px 0; }
+.sideListTitle a:hover { color: #808bcf; }
+
+.sideListDate { color: #fffb22; font-weight: 300; }
+
+.sideListLock { color: #d92226; }
+
+.sideListTeaser { padding: 0 0 10px 0; border-bottom: 1px dotted white; margin-bottom: 10px; }
+
+.sideListIntro { padding: 10px 0 0 0; }
 
 /* =================================================================== */
 /* AD ZONES
