--- a/spe_blog/templates/spe_blog/plugins/side_list.html
+++ b/spe_blog/templates/spe_blog/plugins/side_list.html
@@ -9,7 +9,7 @@
         <span class="sideListTitle"><a href={{ article.get_absolute_url}}>{{ article.title }}</a></span><br>
         <span class="sideListDate">{{ article.date|date:"d F Y" }}</span>
         {% if article.is_readable == True %}
-            | <span class="sideListLock" data-toggle="tooltip" data-placement="bottom" title="Article is free to view"><i class="fa fa-unlock"></i></span>
+            | <span class="sideListLock" data-toggle="tooltip" data-placement="bottom" title="Article is free to view">&nbsp;<i class="fa fa-unlock"></i></span>
         {% endif %}
     </div>
 {% empty %}
