--- a/spe_blog/templates/spe_blog/plugins/article_detail.html
+++ b/spe_blog/templates/spe_blog/plugins/article_detail.html
@@ -2,7 +2,9 @@
 
     <div class="row articleDetail">
         <div class="col-sm-12 articleTitleBox">
-            <h1 class="articleTitle">{{ article.title }}</h1>
+{#            <h1 class="articleTitle">{{ article.title }}</h1>#}
+            <hr class="tiletitlehr">
+            <h1 class="tiletitles">{{ article.title }}</h1>
             <div class="col-sm-12 tiletitlehr"></div>
             <div class="col-sm-8 articleAuthorBox">
                 {{ article.author }} | {{ article.date|date:"d F Y" }}
