--- a/mainsite/static/ogf/css/mainstyle.css
+++ b/mainsite/static/ogf/css/mainstyle.css
@@ -307,6 +307,12 @@ a:hover { text-decoration: none; }
 .inLineBox { background-color: #f2efea; padding: 15px; margin: 20px 0; }
 .inLineBox h3 { padding: 0 0 15px 0; margin: 0 0 15px 0; border-bottom: 1px dotted #b4b4b9; font-size: 20px; font-weight: 700; }
 
+table { margin: 0 10px 10px 0; border-color: #f2efea; }
+table caption { font-size: 12px; padding: 5px; background-color: #f2efea; }
+table tbody { border-color: #f2efea; }
+table th { background-color: #181c41; color: white; }
+table th, table td { padding: 5px; }
+
 /* =================================================================== */
 /* TILES & BOXES
 ====================================================================== */
