--- a/mainsite/templates/include_hide_ads.html
+++ b/mainsite/templates/include_hide_ads.html
@@ -11,11 +11,18 @@
                 $("#adZone1").hide(0);
             }
 
-            if ($("#adZone2").find("img").length > 0) {
+            //if ($("#adZone2").find("img").length > 0) {
+                //do something
+            //} else {
+                // do something else
+            //    $("#adRow2").hide(0);
+            //}
+
+            if ($(".adZone2").find("img").length > 0) {
                 //do something
             } else {
                 // do something else
-                $("#adRow2").hide(0);
+                $(".adZone2").hide(0);
             }
 
         });
