--- a/mainsite/templates/ogf_home.html
+++ b/mainsite/templates/ogf_home.html
@@ -15,9 +15,10 @@
 
         <div class="col-xs-12 adZone2 text-center" id="adZone2">
             <!-- AdSpeed.com Tag 8.0.2 for [Zone] OGF 2 1160x60 [Any Dimension] -->
-            <script type="text/javascript" src="http://g.adspeed.net/ad.php?do=js&zid=79086&oid=7699&wd=-1&ht=-1&target=_blank"></script>
+            <script type="text/javascript" src="http://g.adspeed.net/ad.php?do=js&zid=79086&oid=7699&wd=-1&ht=-1&target=_blank&noerror=1"></script>
             <!-- AdSpeed.com End -->
         </div>
+
     </div>
     <div class="row content-area">
         <div class="col-sm-8 col-lg-7 col-lg-offset-1 areaContent">
