--- a/spe_blog/templates/spe_blog/plugins/picture_with_text_below.html
+++ b/spe_blog/templates/spe_blog/plugins/picture_with_text_below.html
@@ -15,7 +15,11 @@
                         </figure>
                     {% endif %}
                     <div class="story-text">
-                        <span class="pub-date">{{ article.date|date:"d F Y" }}</span>
+                        <span class="pub-date">{{ article.date|date:"d F Y" }}
+                        {% if article.is_readable == True %}{# check if the article is locked or not and indicate #}
+                            | <span class="sideListLock" data-toggle="tooltip" data-placement="bottom" title="Article is free to view">&nbsp;<i class="fa fa-unlock"></i></span>
+                        {% endif %}
+                        </span>
                         <h3>{{ article.title }}</h3>
 
                         {% if article.sponsored %}
