Fixed ckeditor full screen and admin breadbrubs

--- a/spe_blog/templates/spe_blog/plugins/brief_detail.html
+++ b/spe_blog/templates/spe_blog/plugins/brief_detail.html
@@ -26,13 +26,12 @@
 
         <div class="col-sm-12 articleBodyText">
 
-
             {% if article.is_readable == True %}
 
                 {% if article.show_paybox %}
                     <div class="col-sm-12 becomeMember text-center">
-                        <p>You are have access to this full article to experience the outstanding content that is available to OGF subscibers and SPE members.</p>
-                        <p>Please <a href="">JOIN SPE</a> or <a href="">Subscribe to OGF</a></br>
+                        <p>You are have access to this full article to experience the outstanding content that is available to OGF subscribers and SPE members.</p>
+                        <p>Please <a href="">JOIN SPE</a> or <a href="">Subscribe to OGF</a><br>
                             in order to gain full access to the rest that OGF has to offer.</p>
                 </div>
                 {% endif %}
@@ -40,7 +39,6 @@
                 {{ article.article_text | safe }}
 
             {% else %}
-
 
                 {{ article.introduction | safe }}...
 
