Fixes to Topics Plugins
Added fixed reference to article vs articles
Added multi-topics filter for when URL override is not selected

--- a/spe_blog/templates/spe_blog/plugins/topics_list.html
+++ b/spe_blog/templates/spe_blog/plugins/topics_list.html
@@ -4,7 +4,7 @@
     <div>
     {% if topics %}
         {% for topic in topics %}
-            <a href="{{ publication.topics_url.url }}/?topic={{ topic.name }}">
+            <a href="{{ publication.get_absolute_topics_url }}?topic={{ topic.id }}">
             <p>{{ topic.name }}</p>
             </a>
             </div>
