--- a/mainsite/static/www/css/_tiles.scss
+++ b/mainsite/static/www/css/_tiles.scss
@@ -42,6 +42,11 @@
     }
   }
 }
+.tileImgBack {
+  background-position: center;
+  -webkit-background-size: cover;
+  background-size: cover;
+}
 .whiteback, .tile-white {
     background-color:   $col-white;
   }
@@ -172,6 +177,16 @@
   border-bottom:        1px dotted $col-medgrey;
   padding-bottom:       10px;
   margin-bottom:        15px;
+}
+.tileDate {
+  font-weight:          $font-bold;
+  margin-bottom:        10px;
+}
+.tileText {
+  color:                $col-black;
+  &:hover {
+    color:              $col-black;
+  }
 }
 .tile-poi {
   padding:              15px;
