--- a/mainsite/static/ogf/css/_tiles.scss
+++ b/mainsite/static/ogf/css/_tiles.scss
@@ -17,6 +17,16 @@
   padding-bottom:       10px;
   margin-bottom:        15px;
 }
+.tileDate {
+  font-weight:          $font-bold;
+  margin-bottom:        10px;
+}
+.tileText {
+  color:                $col-ogfblack;
+  &:hover {
+    color:              $col-ogfblack;
+  }
+}
 .tile, .tile-blue, .tile-white, .tile-alert, .tile-poll, .eventsNearYou {
   //box-shadow:           0 1px 2px $col-boxshadow;
   margin-bottom:        20px;
@@ -52,6 +62,11 @@
       color:            $col-white;
     }
   }
+}
+.tileImgBack {
+  background-position: center;
+  -webkit-background-size: cover;
+  background-size: cover;
 }
 .whiteback, .tile-white {
   background-color:     $col-white;
