--- a/mainsite/static/ogf/css/mainstyle.css
+++ b/mainsite/static/ogf/css/mainstyle.css
@@ -324,6 +324,11 @@ table th, table td { padding: 5px; }
 
 .tiletitles { color: #3d4044; font-size: 25px; border-bottom: 1px dotted grey; padding-bottom: 10px; margin-bottom: 15px; }
 
+.tileDate { font-weight: 700; margin-bottom: 10px; }
+
+.tileText { color: #2a2a2a; }
+.tileText:hover { color: #2a2a2a; }
+
 .tile, .tile-blue, .tile-white, .tile-alert, .tile-poll, .eventsNearYou { margin-bottom: 20px; padding: 15px; min-width: 150px; }
 
 .tile-alert { background-color: #bf1d21; color: white; }
@@ -336,6 +341,8 @@ table th, table td { padding: 5px; }
 .tile-lightblue { background-color: #a3bce4; color: #26416c; }
 .tile-lightblue a { color: #26416c; }
 .tile-lightblue a:hover { color: white; }
+
+.tileImgBack { background-position: center; -webkit-background-size: cover; background-size: cover; }
 
 .whiteback, .tile-white { background-color: white; }
 
