--- a/mainsite/templates/plugins/tile_img_back.html
+++ b/mainsite/templates/plugins/tile_img_back.html
@@ -1,5 +1,5 @@
 {% autoescape off %}
-    <a href="{{ link }}">
+    <a href="{{ link }}" target="_blank">
         <div class="tile tileImgBack" style="background-image: url('/media/{{ image }}')">
             <div class="tiletitles">{{ title }}</div>
             <div class="tileDate">{{ date | date:"d F Y" }}</div>
