--- a/spe_blog/templates/spe_blog/plugins/article_detail.html
+++ b/spe_blog/templates/spe_blog/plugins/article_detail.html
@@ -12,6 +12,7 @@
             <div class="col-sm-4 articleShares text-right">
                 {% include 'include_article_shares.html' %}
             </div>
+            <div class="col-xs-12 dottedSpacer"></div>
         </div>
 
         {% if article.sponsored == True %}
