--- a/spe_blog/templates/spe_blog/plugins/brief_index.html
+++ b/spe_blog/templates/spe_blog/plugins/brief_index.html
@@ -17,7 +17,10 @@
                 <h4>{{ article.title }} | <span class="badge">{{ article.article_hits }}</span></h4>
                 <p>
                     <span class="briefPub">{{ article.publication }}</span><br>
-                    {{ article.article_text | slice:":100" | safe }}...
+                    {% if article.teaser %}
+                    <p>{{ article.teaser }}</p>
+                {% endif %}
+{#                    {{ article.article_text | slice:":100" | safe }}...#}
                 </p>
             </a>
             </div>
