Allow Special Characters in Brief Index

--- a/spe_blog/templates/spe_blog/plugins/brief_index.html
+++ b/spe_blog/templates/spe_blog/plugins/brief_index.html
@@ -19,7 +19,7 @@
                 {% if article.teaser %}
                     <p>{{ article.teaser }}</p>
                 {% endif %}
-                {{ article.article_text | slice:":100" | striptags }}
+                {{ article.article_text | slice:":100" | striptags | safe }}
                 </p>
             </a>
             </div>
