Changed Brief Interest Template to use text not teaser

--- a/spe_blog/templates/spe_blog/plugins/brief_interest.html
+++ b/spe_blog/templates/spe_blog/plugins/brief_interest.html
@@ -27,8 +27,8 @@
 
             <div class="col-sm-9 poiblurb">
                 <h3>{{ article.title }}</h3>
-                {% if article.teaser %}
-                    <p>{{ article.teaser }}</p>
+                {% if article.text %}
+                    <p>{{ article.text }}</p>
                 {% endif %}
             </div>
         </div>
